Whitespace and code style fixes

--- a/static/treble.css
+++ b/static/treble.css
@@ -33,8 +33,16 @@ body {
     padding: 5px;
 }
 
+.review-list {
+    padding: 0;
+}
+
 .comment-message {
-    margin: 0px;
+    margin: 0;
+}
+
+.comment-artwork {
+    margin-bottom: 1.5rem;
 }
 
 .comment-artwork img{
@@ -42,7 +50,7 @@ body {
 }
 
 .comment-date {
-    margin: 0px;
+    margin: 0;
     position: absolute;
     bottom: 5px;
     right: 5px;
@@ -102,6 +110,10 @@ body {
 
 .left-pad {
     padding-left: 2rem;
+}
+
+.left-margin {
+    margin-left: 2rem;
 }
 
 .link-container {
